--- a/package.json
+++ b/package.json
@@ -6,28 +6,31 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "codecov": "^3.0.4",
-    "dot-env": "^0.0.1",
-    "eslint": "^5.4.0",
-    "handlebars": "^4.0.11",
+    "compression": "^1.7.3",
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
     "helmet": "^3.13.0",
+    "pg": "^7.4.3"
+  },
+  "devDependencies": {
     "nodemon": "^1.18.3",
     "nyc": "^12.0.2",
-    "pg": "^7.4.3",
     "supertest": "^3.1.0",
     "tap-spec": "^5.0.0",
-    "tape": "^4.9.1"
+    "tape": "^4.9.1",
+    "eslint": "^5.4.0"
   },
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "nodemon src/index.js",
-    "start": "node src/index.js"
+    "dev": "nodemon src/app.js",
+    "start": "node src/app.js",
+    "test": "NODE_ENV=test nyc tape ./tests/*.js | tap-spec",
+    "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sunuwars/SEMN.git"
   },
-  "author": "",
+  "author": "Sangita, Emily, Nathalie and Martin",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/sunuwars/SEMN/issues"
