--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         "dev": "nodemon src/app.js",
         "start": "node src/app.js",
         "start:watch": "nodemon src/app.js",
-        "test": "NODE_ENV=test nyc tape ./tests/*.js | tap-spec",
+        "test": "NODE_ENV=test nyc tape ./test/*.js | tap-spec",
         "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov"
     },
     "repository": {
